refactor: Change styling method to styled-components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,17 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@/components/*": ["src/components/*"],
+      "@/types/*": ["src/types/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/styles/*": ["src/styles/*"],
+    }
   },
   "include": ["src"]
 }
