--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
     "styled-components": "^5.3.6",
     "typescript": "~4.3.5"
   },
@@ -43,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
@@ -52,5 +56,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "prettier": "^2.8.1"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   }
 }
