--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,6 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"],
-      "@/components/*": ["src/components/*"],
-      "@/types/*": ["src/types/*"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/styles/*": ["src/styles/*"],
-    }
   },
-  "include": ["src"]
+  "include": ["src"],
 }
