--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-virtualized-auto-sizer": "^1.0.7",
-    "react-window": "^1.8.8",
+    "react-viewport-list": "^6.3.0",
     "styled-components": "^5.3.6",
     "typescript": "~4.3.5"
   },
