refactor: Migrate to Vite from CRA

--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-viewport-list": "^6.3.0",
     "styled-components": "^5.3.6",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "vite": "^4.0.3",
+    "vite-tsconfig-paths": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite --host",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "eslint:check": "eslint . --ext .cjs,.ts,.tsx,.astro --ignore-path .gitignore",
     "eslint:write": "npm run eslint:check -- --fix",
     "prettier:check": "prettier --check --ignore-path .gitignore .",
