--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": ["es6", "dom"],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
-    "target": "esnext",
+    "target": "ESNext",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client"],
     "skipLibCheck": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
