--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.31.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-viewport-list": "^6.3.0",
     "styled-components": "^5.3.6",
     "typescript": "~4.3.5",
@@ -22,8 +22,9 @@
   },
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "tsc && vitest run && vite build",
     "preview": "vite preview",
+    "test": "vitest",
     "eslint:check": "eslint . --ext .cjs,.ts,.tsx,.astro --ignore-path .gitignore",
     "eslint:write": "npm run eslint:check -- --fix",
     "prettier:check": "prettier --check --ignore-path .gitignore .",
@@ -56,7 +57,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "prettier": "^2.8.1"
+    "happy-dom": "^8.1.1",
+    "jsdom": "^20.0.3",
+    "prettier": "^2.8.1",
+    "vitest": "^0.26.3"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
